third_party/blink/web_tests/security/lazy-event-listener-expected.txt
CONSOLE ERROR: line 2: Uncaught SyntaxError: Unexpected token '}'
Test passes if it doesn't crash.
